--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!--
+		Copyright 2021 Git.Training
+->
 <head>
 	<title>An Example Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -14,7 +17,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			<!-- Just some content -->
 		</p>
 	</main>
 	<footer class="container">
