--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-		Copyright 2021 Git.Training
+		Copyright 2021 Git.Training - Summerill Inc
 ->
 <head>
 	<title>An Example Website</title>
