Adding copyright notice to to include Summerill Inc to Simple.html

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-		Copyright 2021 Git.Training - Summerill Inc
+		Copyright 2021 Git.Training - Summerill Inc Branding
 ->
 <head>
 	<title>An Example Website</title>
