--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 		Copyright 2021 Git.Training - Summerill Inc Branding
 ->
 <head>
-	<title>An Example Website</title>
+	<title>A Very Respectfull Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,11 +17,12 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			<!-- Just some content -->
+			I am not sure what will go here, but I am sure
+			it will be nice.
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Bunny Trail 2021</p>
 	</footer>
 </body>
 </html>
