feature branch (fb) adding some trouble to simple.html

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 		Some silly changes to master branch
 ->
 <head>
-	<title>Silly Changes to Master</title>
+	<title>Lots of Trouble</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,9 +16,8 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Jumk Filler Content -->
 		<p>
-			<!-- Just some content -->
+			Just nothing but trouble
 		</p>
 	</main>
 	<footer class="container">
