--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!--
 		Copyright 2021 Git.Training - Summerill Inc Branding
-		Adding line before rebasing conflicts
+		Some silly changes to master branch
 ->
 <head>
-	<title>A Very Respectfull Website</title>
+	<title>Silly Changes to Master</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,7 +16,7 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
+	<!-- Jumk Filler Content -->
 		<p>
 			<!-- Just some content -->
 		</p>
