local: updating simple.html copyright notice

--- a/simple.html
+++ b/simple.html
@@ -20,7 +20,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Summerill Inc. 2014</p>
+		<p>&copy; 2021 Summerill Inc, All rights reserved. </p>
 	</footer>
 </body>
 </html>
