--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 		Copyright 2021 Git.Training - Summerill Inc Branding
 ->
 <head>
-	<title>Updating Title for Stach Example</title>
+	<title>Updating Title for Stach Branch Example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
